# QuantNado

./: .gitignore  404.html  CLAUDE.md  Dockerfile  README.md  environment.yaml  explore_dataset.ipynb  index.html  mkdocs.yml  objects.inv  peak.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: build-container.yml  deploy-docs.yml  pypi.yml  python-tests.yml
api/bamstore/: index.html
api/methylstore/: index.html
api/multiomicsstore/: index.html
api/quantnado/: index.html
api/variantstore/: index.html
basic_usage/: index.html
cli/: index.html
cli/call_peaks/: index.html
cli/create_dataset/: index.html
docs/: basic_usage.md  cli.md  example_dataset.ipynb  examples.md  faq.md  index.md  installation.md  quick_start.md  troubleshooting.md
docs/api/: bamstore.md  methylstore.md  multiomicsstore.md  quantnado.md  variantstore.md
docs/cli/: call_peaks.md  create_dataset.md  index.md
example/: create_dataset.ipynb  example_dataset.ipynb  explore_dataset.ipynb
example_dataset/: example_dataset.ipynb  index.html
examples/: index.html
faq/: index.html
installation/: index.html
quantnado/: __init__.py  api.py  cli.py  utils.py
quantnado/analysis/: __init__.py  core.py  counts.py  features.py  normalise.py  pca.py  plot.py  ranges.py  reduce.py
quantnado/dataset/: __init__.py  _bam_mcc.py  _bam_store.py  _bam_utils.py  _bam_zarr.py  bam.py  combine_stores.py  constants.py  core.py  counts.py  enums.py  features.py  metadata.py  methylation.py  multiomics.py  pca.py  plot.py  ranges.py  reduce.py  store_bam.py  store_coverage.py  store_methyl.py  store_multiomics.py  store_variants.py  variants.py
quantnado/peak_calling/: __init__.py  _device.py  _options.py  _utils.py  call_lanceotron_peaks.py  call_quantile_peaks.py  call_seacr_peaks.py
quantnado/peak_calling/static/lanceotron/: deep_scaler_mean.npy  deep_scaler_scale.npy  lanceotron_v5_03.pt  wide_scaler_mean.npy  wide_scaler_scale.npy
quick_start/: index.html
scripts/: setup_lanceotron_weights.py
seacr_tests/: test_seacr.py
search/: search_index.json
tests/: conftest.py  test_bam_store.py  test_dataset_flow.py
tests/cli/: test_cli.py
tests/data/: MV411-CAT_MLL-N-1_subsample.bam  MV411-CAT_MLL-N-1_subsample.bam.bai  OCI-AML3-control-1-1-A_subsample.bam.bai
tests/integration/: test_bam_store.py  test_bam_store_real.py  test_feature_counts.py  test_mcc_store.py  test_methylation.py  test_multiomics.py  test_peak_calling.py  test_quantnado_api.py  test_quantnado_dataset.py  test_reduce.py  test_seacr.py  test_variants.py
tests/integration/seacr_data/: Dockerfile
tests/unit/: test_api_validation.py  test_device.py  test_enums.py  test_features.py  test_gpu_paths.py  test_lanceotron.py  test_metadata.py  test_normalise.py  test_pca.py  test_plot.py  test_ranges.py  test_utils.py
troubleshooting/: index.html
